[gd_scene load_steps=16 format=2]

[ext_resource path="res://Fonts/whitrabt.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://RetroTheme.tres" type="Theme" id=2]
[ext_resource path="res://RetroFont_Black.tres" type="DynamicFont" id=3]
[ext_resource path="res://Email/Email.gd" type="Script" id=4]
[ext_resource path="res://Images/3671672_attachment_icon.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.00392157, 0.14902, 0.584314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.682353, 0.682353, 0.682353, 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.682353, 0.682353, 0.682353, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=6]
size = 22
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="Animation" id=9]
resource_name = "From"
length = 10.0
tracks/0/type = "value"
tracks/0/path = NodePath("Details/Label6:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Details/Label7:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Details/Label8:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScrollContainer/VBoxContainer/Label:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 3, 10 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Details/Label6:percent_visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Details/Label7:percent_visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Details/Label8:percent_visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ScrollContainer/VBoxContainer/Label:percent_visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="Control" type="Control"]
mouse_filter = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
mouse_filter = 2
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="."]
margin_top = 2.0
margin_right = 1024.0
margin_bottom = 34.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_left = 993.0
margin_top = 8.0
margin_right = 1018.0
margin_bottom = 28.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 5.0
margin_top = 10.0
margin_right = 309.0
margin_bottom = 30.0
theme = ExtResource( 2 )
text = "Inbox - Microsoft Outlook"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel7" type="Panel" parent="."]
margin_left = 34.0
margin_top = 224.0
margin_right = 992.0
margin_bottom = 600.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 45.0
margin_top = 230.0
margin_right = 987.0
margin_bottom = 600.0
scroll_deadzone = 15
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 930.0
margin_bottom = 527.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer"]
margin_right = 930.0
margin_bottom = 459.0
rect_pivot_offset = Vector2( 1088, 32 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "
Happy holidays Jonas!

You've been a pleasure to be around this year. Although we do have our fair
share of disagreements and quarrels, I still think of you as one of my good
friends. Thanks for being a great sport and I hope you enjoy your presents!


Best wishes,
-Calvin










P.S. Click on link below!!
"
percent_visible = 0.0

[node name="TextureButton" type="TextureButton" parent="ScrollContainer/VBoxContainer"]
margin_top = 463.0
margin_right = 930.0
margin_bottom = 527.0
texture_normal = ExtResource( 5 )
stretch_mode = 4

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/TextureButton"]
margin_left = 89.0
margin_top = 25.0
margin_right = 658.0
margin_bottom = 64.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
text = "Secret Santa Presents.zip
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="ScrollContainer/VBoxContainer/TextureButton"]
margin_left = -9.0
margin_top = 1.0
margin_right = 407.0
margin_bottom = 65.0
mouse_filter = 2
custom_styles/panel = SubResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Details" type="Node" parent="."]

[node name="Label2" type="Label" parent="Details"]
margin_left = 34.0
margin_top = 75.0
margin_right = 86.0
margin_bottom = 89.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "From:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="Details"]
margin_left = 34.0
margin_top = 107.0
margin_right = 74.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "To:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel3" type="Panel" parent="Details"]
margin_left = 160.0
margin_top = 68.0
margin_right = 992.0
margin_bottom = 93.0
mouse_filter = 2
custom_styles/panel = SubResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="Details"]
margin_left = 160.0
margin_top = 99.0
margin_right = 992.0
margin_bottom = 124.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel5" type="Panel" parent="Details"]
margin_left = 160.0
margin_top = 132.0
margin_right = 992.0
margin_bottom = 157.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel6" type="Panel" parent="Details"]
margin_left = 160.0
margin_top = 163.0
margin_right = 992.0
margin_bottom = 188.0
mouse_filter = 2
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="Details"]
margin_left = 34.0
margin_top = 138.0
margin_right = 74.0
margin_bottom = 152.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Cc:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="Details"]
margin_left = 34.0
margin_top = 169.0
margin_right = 121.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Subject:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="Details"]
margin_left = 166.0
margin_top = 74.0
margin_right = 404.0
margin_bottom = 88.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "calvinbayaua@gmail.com"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label7" type="Label" parent="Details"]
margin_left = 166.0
margin_top = 107.0
margin_right = 404.0
margin_bottom = 121.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "zeff09@gmail.com"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="Details"]
margin_left = 166.0
margin_top = 169.0
margin_right = 404.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Secret Santa 2021"
percent_visible = 0.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/From = SubResource( 9 )
anims/RESET = SubResource( 10 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="mouse_entered" from="ScrollContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="ScrollContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
